Bug 1647058 - Fix an off-by-one in an URL creation optimization. r=valentin

Differential Revision: https://phabricator.services.mozilla.com/D80401